--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/ui": "^3.1.2",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
